# rainbow-lang

./: Cargo.toml
projects/rainbow-core/: Cargo.toml
projects/rainbow-core/src/: errors.rs  lib.rs
projects/rainbow-core/src/errors/: from_html.rs  from_pest.rs  from_std.rs  mod.rs
projects/rainbow-core/src/renderer/: mod.rs  traits.rs
projects/rainbow-core/src/renderer/from_html/: mod.rs
projects/rainbow-core/src/renderer/iter/: mod.rs
projects/rainbow-core/src/renderer/methods/: mod.rs  traits.rs
projects/rainbow-core/src/schema/: language.rs  methods.rs  mod.rs  parser.rs  value.rs
projects/rainbow-core/src/vm/: methods.rs  mod.rs  parser.rs  reference.rs
projects/rainbow-core/src/vm/builtin/: mod.rs  neo-light.rmb  neo-night.rmb  one-dark.rmb  one-light.rmb
projects/rainbow-core/tests/: main.rs  neo.rmb
projects/rainbow-core/tests/test_parser/: mod.rs  neo.rmb
projects/rainbow-html/src/: macros.rs
projects/rainbow-html/src/traits/: mod.rs
projects/rainbow-html/src/utils/: mod.rs
projects/rainbow-html/src/value/: mod.rs
projects/rainbow-html/tests/: main.rs
projects/rainbow-macro/: Cargo.toml
projects/rainbow-macro/src/: lib.rs
projects/rainbow-macro/src/renderer/: mod.rs
projects/rainbow-macro/tests/: main.rs
projects/rainbow-macro/tests/from_rml/: main.css
projects/rainbow-pest/: Cargo.toml  rainbow.pest
projects/rainbow-pest/src/: lib.rs  rainbow.rs
projects/rainbow-pest/src/ast/: mod.rs  object.rs
projects/rainbow-pest/src/parser/: config.rs  mod.rs
projects/rainbow-pest/src/schema/: mod.rs  parser.rs
projects/rainbow-pest/tests/: main.rs
projects/rainbow-pest/tests/test_parser/: mod.rs  neo.rmb
projects/rainbow-render/: Cargo.toml
projects/rainbow-render/src/backend/: mod.rs
projects/rainbow-render/src/backend/into_html/: mod.rs
projects/rainbow-render/src/frontend/: mod.rs
projects/rainbow-render/src/frontend/from_hljs/: hljs.css  hljs.rb.html  mod.rs
projects/rainbow-render/src/frontend/from_rml/: from.rs  main.css  main.html  mod.rs
projects/rainbow-render/tests/: main.rs
projects/rainbow-render/tests/from_rml/: main.rml  mod.rs
projects/rainbow-rt/: Cargo.toml
projects/rainbow-rt/src/: lib.rs
projects/rainbow-rt/src/ast/: mod.rs
projects/rainbow-rt/src/ast/statements/: mod.rs
projects/rainbow-rt/src/serde/: mod.rs
projects/rainbow-rt/src/value/: string.rs
projects/rainbow-rt/src/value/from_native/: mod.rs
projects/rainbow-rt/tests/: main.rs
projects/rainbow-rt/tests/converter/: mod.rs
projects/rainbow-rt/tests/converter/convert_json/: mod.rs
projects/rainbow-rt/tests/converter/convert_toml/: example.out.arc
projects/rainbow-rt/tests/converter/convert_yaml/: easy_1.yaml  normal_3.out.arc  normal_5.out.arc
projects/rainbow-rt/tests/lsp/: mod.rs
projects/rainbow-rt/tests/parser/: mod.rs
projects/rainbow-rt/tests/parser/easy_structure/: basic.out.arc  cite.arc  cite.out.arc  list_scope.out.arc  number.arc  scope.arc  scope.out.arc
projects/rainbow-rt/tests/parser/hard_structure/: extend_others.out.arc  negative_key.arc  nested_key.arc  nested_key.out.arc  scope_inherit.arc
projects/rainbow-rt/tests/parser/json_compatibility/: object.json  package.json
projects/rainbow-rt/tests/parser/real_file/: doki.out.arc
projects/rainbow-rt/tests/serde/: mod.rs
projects/syntect-rainbow/: Cargo.toml
projects/syntect-rainbow/src/: lib.rs
projects/syntect-rainbow/src/error/: error_std.rs
projects/syntect-rainbow/src/error_3rd/: for_sass.rs  for_time.rs
projects/voml-ast/: Cargo.toml
projects/voml-ast/src/ast/display/: mod.rs
projects/voml-ast/src/ast/into_value/: mod.rs
projects/voml-ast/src/serde/: der.rs
projects/voml-ast/src/serde/ser/: array.rs
projects/voml-ast/src/utils/toc/: mod.rs
projects/voml-ast/src/value/: decimal.rs  dict.rs  list.rs
projects/voml-ast/src/value/access/: mod.rs
projects/voml-ast/src/value/check/: mod.rs
projects/voml-ast/src/value/from_native/: from_tuples.m  from_tuples.rs  parse.rs
projects/voml-ast/src/value/into_native/: mod.rs
projects/voml-ast/tests/converter/convert_json/: test.json
projects/voml-ast/tests/converter/convert_toml/: hard.out.arc  hard.toml  hard_unicode.out.arc  hard_unicode.toml  mod.rs
projects/voml-ast/tests/converter/convert_yaml/: easy_1.out.arc  easy_2.out.arc  easy_2.yaml  easy_3.out.arc  easy_3.yaml  easy_4.out.arc  easy_4.yaml  hard_1.out.arc  mod.rs  normal_1.out.arc  normal_2.out.arc  normal_2.yaml  normal_3.yaml  normal_4.out.arc  normal_4.yaml  normal_5.yaml
projects/voml-ast/tests/display/: mod.rs  number.rs  to_html.rs
projects/voml-ast/tests/parser/easy_structure/: basic.arc  list_scope.arc  mod.rs  number.out.arc
projects/voml-ast/tests/parser/hard_structure/: mod.rs  negative_key.out.arc  scope_inherit.out.arc
projects/voml-ast/tests/parser/json_compatibility/: mod.rs
projects/voml-ast/tests/parser/real_file/: doki.arc  mod.rs
projects/voml-error/: Readme.md
projects/voml-error/src/error/: mod.rs
projects/voml-error/src/error_3rd/: for_globset.rs  for_lsp.rs  for_num.rs  for_pest.rs
projects/voml-from/: Cargo.toml
projects/voml-from/src/: lib.rs
projects/voml-from/src/convert/: json.rs  mod.rs  toml.rs  toml_editable.rs  yaml.rs
projects/voml-parser/: Cargo.toml
projects/web-show-page/: Cargo.toml  readme.md
projects/web-show-page/src/: main.rs
projects/web-show-page/src/backend/into_html/: display.rs  mod.rs
projects/web-show-page/src/frontend/: mod.rs
projects/web-show-page/src/frontend/from_hljs/: hljs.html  hljs.rb.html  mod.rs
projects/web-show-page/tests/from_rml/: main.html
