[package]
name = "rainbow-core"
version = "0.1.0"
authors = ["Aster <192608617@qq.com>"]
description = "..."
repository = "https://github.com/voml/rainbow-lang"
documentation = "https://docs.rs/rainbow-core"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rainbow-pest = { version = "0.1.2", path = "../rainbow-pest" }
html-escape = "0.2.11"

[dev-dependencies]

[features]
default = []