[package]
name = "rainbow-pest"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Rainbow Language Pest Parser"
license = "MPL-2.0"
readme = "../../readme.md"
repository = "https://github.com/voml/rainbow-lang"
exclude = ["/tests/*"]
edition = "2021"


[dependencies]
pest = "2.1.3"
hex_color = "1.0.0"

[dev-dependencies]
pest_generator = "2.1.3"
quote = "1.0.20"
