[package]
name = "rainbow-pest"
version = "0.1.2"
authors = ["Aster <192608617@qq.com>"]
description = "Rainbow Language Pest Parser"
repository = "https://github.com/voml/rainbow-lang"
documentation = "https://docs.rs/rainbow-core"
readme = "../../readme.md"
license = "MPL-2.0"
edition = "2021"


[dependencies]
pest = "2.5.0"
hex_color = "2.0.0"

[dev-dependencies]
pest_generator = "2.5.0"
quote = "1.0.21"
