[package]
name = "rainbow-render"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
rainbow-core = { version = "0.1.0", path = "../rainbow-core" }
itertools = "0.10.3"
html_parser = { version = "0.6.3", optional = true }
scraper = { version = "0.13.0", optional = true }
selectors = { version = "0.22.0", optional = true }


[features]
default = ["html"]
html = ["html_parser", "scraper", "selectors"]
lsp = []
