[package]
name = "rainbow-render"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2021"

[dependencies]
rainbow-core = { version = "0.1.0", path = "../rainbow-core" }
itertools = "0.10.3"
html_parser = "0.6.3"
html-escape = "0.2.11"
scraper = "0.13.0"
selectors = "0.22.0"

[features]
default = ["html"]
html = []
lsp = []
