[package]
name = "voml-error"
version = "0.1.0"
authors = ["192607617@qq.com"]
description = "External function system for arc"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
url = "2.2.2"

[dev-dependencies]

[features]
default = []