[package]
name = "arc-rs"
version = "0.5.1"
authors = ["Aster <galaster@foxmail.com>"]
description = "Arc Readable Configuration"
license = "MPL-2.0"
readme = "../../Readme.md"
repository = "https://github.com/doki-land/arc-rs"
exclude = ["/tests/*"]
edition = "2018"

[dependencies]
num = "0.4.0"
bigdecimal = "0.3.0"
indexmap = "1.7.0"

serde1 = { version = "1.0.1", optional = true }
lsp-types = { version = "0.91.1", optional = true }

voml-error = {version = "0.1", path = "../voml-error"}
voml-collection = {version = "0.1", path = "../voml-collection"}

[dependencies.yggdrasil-shared]
version = "0.1.9"
default-features = false

[features]
default = []
serde = ["serde1"]
lsp = [
    "lsp-types",
    "yggdrasil-shared/lsp",
    "voml-collection/lsp"
]
